--- a/Pages/activities.html
+++ b/Pages/activities.html
@@ -24,7 +24,7 @@
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body class="container-fluid">
     <!------------>
@@ -33,7 +33,7 @@
     <header class="header-container">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">The Bird Ambassador</a>
+          <a class="navbar-brand" href="../index.html">The Bird Ambassador</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -48,16 +48,21 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Pages/schedule.html">Schedule</a>
+                <a class="nav-link" href="schedule.html">Schedule</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Pages/activities.html">Activities</a>
+                <a class="nav-link" href="#">Activities</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Pages/about.html">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
             </ul>
           </div>
@@ -65,144 +70,32 @@
       </nav>
     </header>
 
-    <!-------------->
-    <!-- Carousel -->
-    <!-------------->
-    <div class="container carousel-container">
+    <!---------------->
+    <!-- Activities -->
+    <!---------------->
+    <div class="container activities py-2 my-2">
       <div
-        id="carouselIndicators"
-        class="carousel slide carousel-fade"
-        data-bs-ride="true"
+        style="height: auto; width: auto"
+        class="container justify-content-center"
       >
-        <!-- Carousel Indicators -->
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselIndicators"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselIndicators"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselIndicators"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselIndicators"
-            data-bs-slide-to="3"
-            aria-label="Slide 4"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselIndicators"
-            data-bs-slide-to="4"
-            aria-label="Slide 5"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselIndicators"
-            data-bs-slide-to="5"
-            aria-label="Slide 6"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselIndicators"
-            data-bs-slide-to="6"
-            aria-label="Slide 7"
-          ></button>
+        <h1 style="margin: 20px" class="text-center">Activities</h1>
+        <div class="container">
+          <h2>Citizen Science</h2>
+          <p>
+            Join Milly (a graduate student from York University) as she searches
+            for Killdeer nests, bands Killdeer and checks up on banded Killdeer.
+            To get involved, meet Milly at 70 Canuck Ave between 4:00 and 6:15
+            pm on Wednesdays and Thursdays. She’ll be in an orange t-shirt!
+          </p>
+          <h2>Information Table</h2>
+          <p>
+            Milly will have a bird information table set up Trail Entrance near
+            70 Canuck parking lot all throughout the summer. Community members
+            are encouraged to come and ask Milly all their birding questions!
+          </p>
+          <h4>Bird Walk</h4>
+          <p>A 60-minute bird-focused walk.</p>
         </div>
-
-        <div class="container carousel-inner">
-          <!-- First item & active item on page load -->
-          <div class="carousel-item active">
-            <img
-              src="imgs/killdeer_defending_nest_2.JPG"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-
-          <!-- Other carousel items -->
-          <div class="carousel-item">
-            <img
-              src="imgs/killdeer_close_up.JPG"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-
-          <div class="carousel-item">
-            <img
-              src="imgs/killdeer_incubating_in_nest.JPG"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-
-          <div class="carousel-item">
-            <img
-              src="imgs/killdeer_chick.JPG"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-
-          <div class="carousel-item">
-            <img
-              src="imgs/killdeer_nest_four_eggs.JPG"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-
-          <div class="carousel-item">
-            <img
-              src="imgs/killdeer_nest_three_eggs.JPG"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-
-          <div class="carousel-item">
-            <img
-              src="imgs/killdeer_egg_float.JPG"
-              class="d-block w-100"
-              alt="..."
-            />
-          </div>
-        </div>
-
-        <!-- Button for previous item in carousel -->
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselIndicators"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-
-        <!-- Button for previous item in carousel -->
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselIndicators"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
     </div>
 
@@ -296,7 +189,7 @@
                 href="https://www.glendon.yorku.ca/mckinnonlab/"
                 class="york-logo text-muted"
               >
-                <img src="imgs/Logo_York_University.svg" alt="" />
+                <img src="../imgs/Logo_York_University.svg" alt="" />
               </a>
             </p>
           </div>
@@ -309,7 +202,7 @@
                 href="https://downsviewpark.ca/events/bird-ambassador-program"
                 class="downsview-park-logo text-muted"
               >
-                <img src="imgs/downsview_park_logo.svg" alt="" />
+                <img src="../imgs/downsview_park_logo.svg" alt="" />
               </a>
             </p>
           </div>
